fixed screen resizing during transitions on mobile devices

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -148,6 +148,7 @@ a {
   background-color: transparent;
 }
 .mobile-wrapper {
+  overflow-x: hidden;
   position: relative;
   width: 342px;
   min-height: 100vh;
